# python-templateer

./: .gitignore  README.md  pyproject.toml
src/: templateer.py
tests/: test_templateer.py
